feat: implement stateless JWT authentication filter, fix API route access controls, and enhance responsive frontend marketplace pages