@@ -1,11 +1,11 @@
 package com.ws101.pinuela.pajanostan.EcommerceApi.model;
 
-import jakarta.persistence.*;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
+import jakarta.persistence.*;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 @Entity
 @Table(name = "users")
@@ -21,27 +21,29 @@ public class User implements UserDetails {
     @Column(nullable = false)
     private String password;
 
-    private String role;
+    private String role; // e.g., "USER" or "ADMIN"
 
-    // Boilerplate Methods for Spring Security
+    // --- MUST IMPLEMENT USERDETAILS METHODS ---
+
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.singletonList(new SimpleGrantedAuthority(role));
+        // Safe null-check to avoid startup/runtime crashes during auth parsing
+        String userRole = (this.role == null) ? "USER" : this.role;
+        return List.of(new SimpleGrantedAuthority("ROLE_" + userRole));
     }
 
-    @Override
-    public String getPassword() { return password; }
-
-    @Override
-    public String getUsername() { return username; }
-
+    @Override public String getPassword() { return this.password; }
+    @Override public String getUsername() { return this.username; }
     @Override public boolean isAccountNonExpired() { return true; }
     @Override public boolean isAccountNonLocked() { return true; }
     @Override public boolean isCredentialsNonExpired() { return true; }
     @Override public boolean isEnabled() { return true; }
 
+    // --- GETTERS AND SETTERS ---
     public Long getId() { return id; }
+    public void setId(Long id) { this.id = id; }
     public void setUsername(String username) { this.username = username; }
     public void setPassword(String password) { this.password = password; }
+    public String getRole() { return role; }
     public void setRole(String role) { this.role = role; }
 }
